adicionando comportamento dinâmico para os componentes

--- a/src/app/component/big-card/big-card.component.html
+++ b/src/app/component/big-card/big-card.component.html
@@ -1,17 +1,17 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://i0.wp.com/dadosmisticos.com/wp-content/uploads/2017/03/wallpaper_1280-x-960-wallpaper.jpg?fit=1200%2C900&ssl=1"
+    <img src="{{photoCover}}"
     alt=""
     height="200px"
     srcset="">
 
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__resume">
     <p><a href="#">
-      Testando paragrafo
+      {{cardResume}}
     </a></p>
   </div>
 </div>
