--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,12 +6,28 @@
 
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+    photoCover="https://i0.wp.com/dadosmisticos.com/wp-content/uploads/2017/03/wallpaper_1280-x-960-wallpaper.jpg?fit=1200%2C900&ssl=1"
+    cardTitle="O que é RPG?"
+    cardResume="Do inglês, a sigla RPG significa Role Playing Game, um jogo de interpretar papéis. Neste caso o jogador não é apenas um pino andando em casas de um tabuleiro, ele interpreta um personagem, com emoções, falas e habilidades enquanto atravessa um mundo fantástico."
+    >
+  </app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    photoCover="https://2.bp.blogspot.com/-MtS_tN7B7Eo/W0KxG2NU2BI/AAAAAAAADNQ/MflzaDv8KiQXnYmzIIR-7wM95rp-rKY6QCLcBGAs/s1600/D%2526D5e.jpg"
+    cardTitle="Noticias de D&D 5e"
+    >
+  </app-small-card>
+    <app-small-card
+    photoCover="https://jovemnerd.com.br/wp-content/uploads/2021/03/NC_767-classes-rpg-WALLPAPER.jpg"
+    cardTitle="Classes de RPG"
+    >
+  </app-small-card>
+    <app-small-card
+    photoCover="https://www.rederpg.com.br/wp/wp-content/uploads/2007/03/08-11-maneiras-de-ser-um-jogador-de-RPG-melhor.png"
+    cardTitle="Lutas contra chefes">
+  </app-small-card>
   </div>
 </div>
 
