--- a/src/app/component/small-card/small-card.component.html
+++ b/src/app/component/small-card/small-card.component.html
@@ -1,13 +1,13 @@
 <div class="container__small-cards">
   <div class="container__small-cards-content">
     <div class="small-card__photo">
-      <img src="https://2.bp.blogspot.com/-MtS_tN7B7Eo/W0KxG2NU2BI/AAAAAAAADNQ/MflzaDv8KiQXnYmzIIR-7wM95rp-rKY6QCLcBGAs/s1600/D%2526D5e.jpg"
+      <img src="{{ photoCover }}"
       alt=""
       srcset="">
     </div>
 
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
   </div>
 
