adição de páginas de conteúdo dinâmico

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,35 +1,78 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
 
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
   <div class="articles__main">
+
     <app-big-card
-    photoCover="https://i0.wp.com/dadosmisticos.com/wp-content/uploads/2017/03/wallpaper_1280-x-960-wallpaper.jpg?fit=1200%2C900&ssl=1"
-    cardTitle="O que é RPG?"
-    cardResume="Do inglês, a sigla RPG significa Role Playing Game, um jogo de interpretar papéis. Neste caso o jogador não é apenas um pino andando em casas de um tabuleiro, ele interpreta um personagem, com emoções, falas e habilidades enquanto atravessa um mundo fantástico."
+    Id="1"
+    photoCover="https://cdn.awsli.com.br/1000x5000/1759/1759959/arquivos/1.png"
+    cardTitle="Sobre mim e sobre este blog"
+    cardResume="Olá, eu sou o Matheus e esse blog eu desenvolvi como projeto de portifófio para meu Github. Irei aproveitar este espaço para falar de mim, meus trabalhos, projetos, estudo e interesses."
     >
   </app-big-card>
   </div>
+
   <div class="articles__others">
     <app-small-card
-    photoCover="https://2.bp.blogspot.com/-MtS_tN7B7Eo/W0KxG2NU2BI/AAAAAAAADNQ/MflzaDv8KiQXnYmzIIR-7wM95rp-rKY6QCLcBGAs/s1600/D%2526D5e.jpg"
-    cardTitle="Noticias de D&D 5e"
+    Id="2"
+    photoCover="https://1.bp.blogspot.com/-SRrWvDgqHiQ/X03hBDpA0oI/AAAAAAAAVzg/l3hKVeWLP34bzW84ML8MN6FfjxHwLn8_QCLcBGAsYHQ/s1600/natacao%2Bpotiguar%2Bcoach%2B%25283%2529.jpg"
+    cardTitle="Minhas experiencias de trabalho"
     >
+
   </app-small-card>
     <app-small-card
-    photoCover="https://jovemnerd.com.br/wp-content/uploads/2021/03/NC_767-classes-rpg-WALLPAPER.jpg"
-    cardTitle="Classes de RPG"
+    Id="3"
+    photoCover="https://www.unicerp.edu.br/public/news/e7161a5aacce-594a.png"
+    cardTitle="Minha formação acadêmica"
     >
+
   </app-small-card>
     <app-small-card
-    photoCover="https://www.rederpg.com.br/wp/wp-content/uploads/2007/03/08-11-maneiras-de-ser-um-jogador-de-RPG-melhor.png"
-    cardTitle="Lutas contra chefes">
+    Id="4"
+    photoCover="https://miro.medium.com/v2/resize:fit:2000/1*BKLG2rlY2s2wVU00fIk2SA.jpeg"
+    cardTitle="Projetos desenvolvidos ou em desenvolvimento">
   </app-small-card>
   </div>
 </div>
 
+<div class="container__titles">
+  <h1>MEUS HOBBIES</h1>
+  <hr />
+</div>
 
+<div class="container__articles">
+  <div class="articles__main">
+
+    <app-big-card
+    Id="5"
+    photoCover="https://sm.ign.com/t/ign_br/tv/o/one-piece-/one-piece-2_1xby.1200.jpg"
+    cardTitle="One Piece"
+    cardResume="Eu sou um grande fã de one piece e com certeza nao poderia deixar de colocar aqui. As aventuras que este grupo de piratas enfrentam e seu paralelo com a vida real, fazem com que este anime além de ser uma fonte de lazer, se torne também uma forma de abordar assuntos delicados que se extendem desde tempos antigos ate os dias de hoje."
+    >
+  </app-big-card>
+  </div>
+
+  <div class="articles__others">
+    <app-small-card
+    Id="6"
+    photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdqhZLCi92JrKASfTVd5n5tjZpYZ5IwVqDFQ&usqp=CAU"
+    cardTitle="Atividades físicas"
+    >
+
+  </app-small-card>
+    <app-small-card
+    Id="7"
+    photoCover="https://www.bringit.com.br/blog/wp-content/uploads/2019/12/homem-ouvindo-musica.jpg"
+    cardTitle="Estilos musicais"
+    >
+
+  </app-small-card>
+    <app-small-card
+    Id="8"
+    photoCover="https://jovemnerd.com.br/wp-content/uploads/2021/03/NC_767-classes-rpg-WALLPAPER.jpg"
+    cardTitle="RPG de mesa">
+  </app-small-card>
+  </div>
+</div>
 
