--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,9 +6,11 @@
   justify-content: center;
 }
 
-header {
-  margin-top: 15px;
+.container__titles > h1 {
+  margin-top: 30px;
+
   display: flex;
+  flex-direction: row;
   justify-content: center;
 }
 
